# DigitalPaperControlPlane

./: .gitignore  README.md  commandExecuted.md  requirements.txt
dtp-controll-panel/: README.md  calendar.py  pyproject.toml
dtp-controll-panel/dtp_controll_panel/: .env.sample  fileio.py  main.py  stocker.py  wordOfDay.py
scripts/: renderRandom.py  start_job.sh
